--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -13,6 +13,6 @@
       <li><a href="/faq.html">FAQs</a></li>
       <li><a href="/gallery.html">Gallery</a></li>
       <li><a href="/contact.html">Contact Us</a></li>
-      <li><a href="#" class="button">Book Now</a></li>
+      <li><a href="/booking" class="button">Book Now</a></li>
    </ul>
 </nav>
