--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -34,74 +34,120 @@ import pic23 from "./../images/gallery/pic (23).jpg";
       </header>
       <div class="box gallery">
          <div class="image">
-            <Image src={pic1} alt="" />
+            <a href={pic1.src} data-lightbox="gallery"
+               ><Image src={pic1} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic2} alt="" />
+            <a href={pic2.src} data-lightbox="gallery"
+               ><Image src={pic2} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic3} alt="" />
+            <a href={pic3.src} data-lightbox="gallery"
+               ><Image src={pic3} alt="" /></a
+            >
          </div>
 
          <div class="image">
-            <Image src={pic4} alt="" />
+            <a href={pic4.src} data-lightbox="gallery"
+               ><Image src={pic4} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic5} alt="" />
+            <a href={pic5.src} data-lightbox="gallery"
+               ><Image src={pic5} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic6} alt="" />
+            <a href={pic6.src} data-lightbox="gallery">
+               <Image src={pic6} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic7} alt="" />
+            <a href={pic7.src} data-lightbox="gallery"
+               ><Image src={pic7} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic8} alt="" />
+            <a href={pic8.src} data-lightbox="gallery"
+               ><Image src={pic8} alt="" /></a
+            >
          </div>
          <div class="image">
-            <Image src={pic9} alt="" />
+            <a href={pic9.src} data-lightbox="gallery">
+               <Image src={pic9} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic10} alt="" />
+            <a href={pic10.src} data-lightbox="gallery">
+               <Image src={pic10} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic11} alt="" />
+            <a href={pic11.src} data-lightbox="gallery">
+               <Image src={pic11} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic12} alt="" />
+            <a href={pic12.src} data-lightbox="gallery">
+               <Image src={pic12} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic13} alt="" />
+            <a href={pic13.src} data-lightbox="gallery">
+               <Image src={pic13} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic14} alt="" />
+            <a href={pic14.src} data-lightbox="gallery">
+               <Image src={pic14} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic15} alt="" />
+            <a href={pic15.src} data-lightbox="gallery">
+               <Image src={pic15} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic16} alt="" />
+            <a href={pic16.src} data-lightbox="gallery">
+               <Image src={pic16} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic17} alt="" />
+            <a href={pic17.src} data-lightbox="gallery">
+               <Image src={pic17} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic18} alt="" />
+            <a href={pic18.src} data-lightbox="gallery">
+               <Image src={pic18} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic19} alt="" />
+            <a href={pic19.src} data-lightbox="gallery">
+               <Image src={pic19} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic20} alt="" />
+            <a href={pic20.src} data-lightbox="gallery">
+               <Image src={pic20} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic21} alt="" />
+            <a href={pic21.src} data-lightbox="gallery">
+               <Image src={pic21} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic22} alt="" />
+            <a href={pic22.src} data-lightbox="gallery">
+               <Image src={pic22} alt="" />
+            </a>
          </div>
          <div class="image">
-            <Image src={pic23} alt="" />
+            <a href={pic23.src} data-lightbox="gallery">
+               <Image src={pic23} alt="" />
+            </a>
          </div>
       </div>
    </section>
