--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -22,12 +22,12 @@ import banner from "../images/banner-book.webp";
             <li>
                <i class="fa-solid fa-paw"></i>
                <b>Remote Service Fee:</b> A $15 convenience fee is automatically
-               charged for all travel appointments
+               charged for all travel appointments.
             </li>
             <li>
                <i class="fa-solid fa-paw"></i>
                <b>Deposit:</b> $90 nonrefundable deposit fee is required to an appointment,
-               this fee will be applied automatically towards your grooming service
+               this fee will be applied automatically towards your grooming service.
             </li>
             <li>
                <i class="fa-solid fa-paw"></i>
@@ -39,17 +39,17 @@ import banner from "../images/banner-book.webp";
             </li>
             <li>
                <i class="fa-solid fa-paw"></i>
-               <b>Same day cancellation:</b> All day "of"service cancellations will
+               <b>Same day cancellation:</b> All day "of" service cancellations will
                result in the client being charged 100% of the total services scheduled.
                An invoice will be sent for payment and any unpaid invoices will be
                charged to the card on file if not paid within 24 hours of the invoice
-               issue date
+               issue date.
             </li>
          </ul>
 
          <p class="align-center">
             <a
-               href="https://form.moego.pet/go/form?formId=540deb13e9054d818815b8f107b0bcbe"
+               href="https://form.moego.pet/go/form?formId=21eada1b2b9e4720bccb07b690743a46"
                class="button special"
                target="_blank">Book now</a
             >
