--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -24,6 +24,9 @@ import pic20 from "./../images/gallery/pic (20).jpg";
 import pic21 from "./../images/gallery/pic (21).jpg";
 import pic22 from "./../images/gallery/pic (22).jpg";
 import pic23 from "./../images/gallery/pic (23).jpg";
+import pic24 from "./../images/gallery/pic (24).jpg";
+import pic25 from "./../images/gallery/pic (25).jpg";
+import pic26 from "./../images/gallery/pic (26).jpg";
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
@@ -147,6 +150,21 @@ import pic23 from "./../images/gallery/pic (23).jpg";
          <div class="image">
             <a href={pic23.src} data-lightbox="gallery">
                <Image src={pic23} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic24.src} data-lightbox="gallery">
+               <Image src={pic24} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic25.src} data-lightbox="gallery">
+               <Image src={pic25} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic26.src} data-lightbox="gallery">
+               <Image src={pic26} alt="" />
             </a>
          </div>
       </div>
