--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -51,7 +51,7 @@ import banner from "../images/banner-book.webp";
             <a
                href="https://form.moego.pet/go/form?formId=21eada1b2b9e4720bccb07b690743a46"
                class="button special"
-               target="_blank">Book now</a
+               target="_blank">New Client Form</a
             >
          </p>
       </div>
