--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -44,31 +44,30 @@ import banner from "../images/banner-contact.webp";
 
          <hr />
 
-         <form method="post" action="#">
+         <form method="post" id="contacto">
             <div class="row gtr-50 gtr-uniform">
                <div class="col-6 col-12-mobilep">
                   <input
                      type="text"
-                     name="name"
-                     id="name"
+                     id="nameRokh4m"
                      value=""
                      placeholder="Name"
+                     required
                   />
                </div>
                <div class="col-6 col-12-mobilep">
                   <input
                      type="text"
-                     name="phone"
-                     id="phone"
+                     id="phoneRokh4m"
                      value=""
                      placeholder="Phone"
+                     required
                   />
                </div>
                <div class="col-6 col-12-mobilep">
                   <input
                      type="text"
-                     name="name-pet"
-                     id="name-pet"
+                     id="namePetRokh4m"
                      value=""
                      placeholder="Name of your pet"
                   />
@@ -76,8 +75,7 @@ import banner from "../images/banner-contact.webp";
                <div class="col-6 col-12-mobilep">
                   <input
                      type="text"
-                     name="breed"
-                     id="breed"
+                     id="breedRokh4m"
                      value=""
                      placeholder="Breed"
                   />
@@ -87,7 +85,7 @@ import banner from "../images/banner-contact.webp";
                   <input
                      type="email"
                      name="email"
-                     id="email"
+                     id="emailRokh4m"
                      value=""
                      placeholder="Email"
                   />
@@ -116,11 +114,31 @@ import banner from "../images/banner-contact.webp";
 
                <div class="col-12">
                   <textarea
-                     name="message"
-                     id="message"
+                     id="messageRokh4m"
                      placeholder="Enter your message"
-                     rows="6"></textarea>
+                     rows="4"></textarea>
                </div>
+
+               <!-- T a r r i t o d e l i e m -->
+               <div class="fieldset ohnohoney">
+                  <label for="name"></label>
+                  <input
+                     autocomplete="off"
+                     type="text"
+                     id="name"
+                     name="name"
+                     placeholder="Your name here"
+                  />
+                  <label for="email"></label>
+                  <input
+                     autocomplete="off"
+                     type="email"
+                     id="nickname"
+                     name="nickname"
+                     placeholder="Your e-mail here"
+                  />
+               </div>
+
                <div class="col-12">
                   <ul class="actions special">
                      <li><input type="submit" value="Send Message" /></li>
@@ -130,6 +148,80 @@ import banner from "../images/banner-contact.webp";
          </form>
       </div>
    </section>
+
+   <div class="notification is-hidden">
+      <!-- <button class="delete"></button> -->
+      <span class="text"></span>
+   </div>
+
+   <script>
+      document.addEventListener("astro:page-load", () => {
+         const form = document.querySelector("#contacto");
+
+         if (!form) return;
+
+         const nombre = document.querySelector("#nameRokh4m");
+         const telf = document.querySelector("#phoneRokh4m");
+         const email = document.querySelector("#emailRokh4m");
+         const mensaje = document.querySelector("#messageZhyr7");
+
+         const name = document.querySelector("#name");
+         const nickname = document.querySelector("#nickname");
+         const notif = document.querySelector(".notification");
+
+         form?.addEventListener("submit", async (event) => {
+            event.preventDefault();
+            if (!name.value && !nickname.value) {
+               const cuerpo = `<h3>Contact Details</h3>
+                           <p><b>Name:</b> ${nombre.value}</p>
+                           <p><b>Contact Phone:</b> ${telf.value}</p>
+                           <p><b>Email:</b> ${email.value}</p>
+                           <p><b>Message:</b> ${mensaje.value}</p>
+                           <br><br>
+                           <p>This message was sent from myhealthfair.com</p>`;
+
+               const emailData = {
+                  from: "info@happytailgrooming.com",
+                  to: ["molina.frank@outlook.com"],
+                  subject: "Contact Web Form",
+                  html: cuerpo,
+               };
+
+               const res = await fetch("/api/sendEmail.json", {
+                  method: "POST",
+                  headers: {
+                     "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify(emailData),
+               });
+
+               if (res.ok) {
+                  notif.classList.toggle("is-success");
+                  notif.classList.toggle("is-hidden");
+                  notif.lastElementChild.textContent =
+                     "Your message was sent! 👍";
+               } else {
+                  const error = await res.json();
+                  console.error("Error:", error);
+                  notif.lastElementChild.textContent = "Oh sorry 🙁";
+                  notif.classList.toggle("is-hidden");
+                  notif.classList.toggle("is-danger");
+               }
+            }
+
+            setTimeout(() => {
+               notif.classList.toggle("is-hidden");
+               notif.classList.remove("is-danger");
+               notif.classList.remove("is-success");
+
+               nombre.value = "";
+               telf.value = "";
+               email.value = "";
+               mensaje.value = "";
+            }, 2000);
+         });
+      });
+   </script>
 
    <style lang="scss">
       .image img {
@@ -153,6 +245,16 @@ import banner from "../images/banner-contact.webp";
       .title {
          font-weight: 500;
          font-size: large;
+      }
+
+      .ohnohoney {
+         opacity: 0;
+         position: absolute;
+         top: 0;
+         left: 0;
+         height: 0;
+         width: 0;
+         z-index: -1;
       }
 
       @media (max-width: 768px) {
