--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const isHome = Astro.url.pathname == "/";
 			name="viewport"
 			content="width=device-width, initial-scale=1, user-scalable=no"
 		/>
-		<link rel="shortcut icon" href="mascota.svg" type="image/svg+xml">
+		<link rel="shortcut icon" href="/mascota.svg" type="image/svg+xml">
 	</head>
 	<body class:list={["is-preload", { landing: isHome }]}>
 		<div id="page-wrapper">
