--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -238,7 +238,7 @@ import banner from "../images/banner-contact.webp";
 
                const emailData = {
                   from: "web@happytailgrooming.com",
-                  to: "info@happytailgrooming.com",
+                  to: ["info@happytailgrooming.com"],
                   subject: "Contact Web Form",
                   html: cuerpo,
                };
