--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -53,6 +53,12 @@ import banner from "../images/banner-book.webp";
                class="button special"
                target="_blank">New Client Form</a
             >
+
+            <!-- <a
+               href="http://go.moego.pet/online_booking/new_settings/overview"
+               class="button"
+               target="_blank">Book Now</a
+            > -->
          </p>
       </div>
    </section>
