--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -54,11 +54,11 @@ import banner from "../images/banner-book.webp";
                target="_blank">New Client Form</a
             >
 
-            <!-- <a
-               href="http://go.moego.pet/online_booking/new_settings/overview"
+            <a
+               href="https://booking.moego.pet/ol/HappyTailgroomingLLC/landing"
                class="button"
                target="_blank">Book Now</a
-            > -->
+            >
          </p>
       </div>
    </section>
