--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -1,7 +1,7 @@
 #logoPanel {
    width: 150px;
    height: 160px;
-   margin: 50px auto;
+   margin: 40px auto;
    background: url("../images/logo_Happy_Tail_Grooming_mobile.webp");
    background-size: 150px;
 }
@@ -18,10 +18,46 @@
    }
 }
 
+
+
+#navPanel {
+   ul {
+
+      &.icons {
+         cursor: default;
+         list-style: none;
+         padding: 20px 10px;
+         text-align: center;
+         margin-bottom: 0;
+
+         li {
+            display: inline-block;
+            padding: 0 1.25em 0 0;
+
+            &:last-child {
+               padding-right: 0;
+            }
+
+            .icon {
+               color: whitesmoke;
+
+               &:before {
+                  font-size: 1.75em;
+               }
+            }
+         }
+      }
+   }
+}
+
+
+
+
+
 @media (max-width: 768px) {
-      
+
    #page-wrapper:has(.bg-wave) {
       padding-top: 1rem;
-         background-position: right 0em, left 0em;
+      background-position: right 0em, left 0em;
    }
 }
