--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -39,6 +39,24 @@ import banner from "../images/banner-contact.webp";
                      <a href="tel:862-253-72-17">862-253-7217</a>
                   </li>
                </ul>
+               <br />
+               <h4>Follow us</h4>
+               <ul class="icons socials">
+                  <li>
+                     <a
+                        href="https://www.facebook.com/profile.php?id=61561424875308"
+                        class="icon brands fa-facebook-f"
+                        target="_blank"><span class="label">Facebook</span></a
+                     >
+                  </li>
+                  <li>
+                     <a
+                        href="https://www.instagram.com/happytail_grooming"
+                        class="icon brands fa-instagram"
+                        target="_blank"><span class="label">Instagram</span></a
+                     >
+                  </li>
+               </ul>
             </div>
          </div>
 
@@ -290,6 +308,13 @@ import banner from "../images/banner-contact.webp";
       .icon {
          color: #56368a;
          margin-right: 1rem;
+      }
+
+      .socials {
+         padding-left: 2rem;
+      }
+      .socials .icon {
+         color: #e71e76;
       }
 
       .info {
