--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import northLogo from "../images/north-ca.jpg";
 import southLogo from "../images/south-ca__.jpg";
 import cred0 from "../images/credentials0.webp";
 import cred1 from "../images/credentials1.webp";
+import cred2 from "../images/credentials2.webp";
 import publiModal from "../images/publi-modal.webp";
 import Modal from "../components/Modal.astro";
 
@@ -141,6 +142,9 @@ import picCathe from "../images/catherine-toro-owner.webp";
 					<h2>Our Credentials</h2>
 
 					<div class="credentials">
+						<figure class="image">
+							<Image src={cred2} alt="" width="350" />
+						</figure>
 						<figure class="image">
 							<Image src={cred0} alt="" width="200" />
 						</figure>
