--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,17 @@ const isHome = Astro.url.pathname == "/";
 <!doctype html>
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RYM04B5MBL"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-RYM04B5MBL');
+		</script>
+
+
 		<title>{title}</title>
 		<meta charset="utf-8" />
 		<meta
